[package]
name = "datafusion-objectstore-hdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false }
async-trait = "0.1.41"
futures = "0.3"
#datafusion = "^6.0.0"
datafusion = { path = "../arrow-datafusion-pivot/datafusion" }
fs-hdfs = { path = "../hdfs/fs-hdfs" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
uuid = { version = "^0.8", features = ["v4"] }
arrow = { version = "10.0.0", features = ["prettyprint"] }