[package]
name = "datafusion-objectstore-hdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false }
async-trait = "0.1.41"
futures = "0.3"
datafusion-storage = { git = "https://github.com/apache/arrow-datafusion.git", rev = "0194a27d0f68108c20b12456e9dafadbb170085e" }
datafusion-common = { git = "https://github.com/apache/arrow-datafusion.git", rev = "0194a27d0f68108c20b12456e9dafadbb170085e" }
fs-hdfs = "^0.1.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
uuid = { version = "^0.8", features = ["v4"] }
arrow = { version = "^11.0.0", features = ["prettyprint"] }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev = "0194a27d0f68108c20b12456e9dafadbb170085e" }