[package]
name = "datafusion-objectstore-hdfs"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4" }
futures = "0.3"
datafusion-data-access = { git = "https://github.com/yahoNanJing/arrow-datafusion.git", rev = "c7d0f0c73185e0ebb7d2339752e0d3e018001cdf" }
fs-hdfs = "^0.1.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
uuid = { version = "^0.8", features = ["v4"] }
arrow = { version = "^11.0.0", features = ["prettyprint"] }
datafusion = { git = "https://github.com/yahoNanJing/arrow-datafusion.git", branch = "dev" }