[package]
name = "datafusion-hdfs-examples"
version = "0.1.0"
edition = "2021"

authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs"

[dependencies]
ballista = { git = "https://github.com/yahoNanJing/arrow-ballista.git", branch = "issue-259", features = ["standalone", "hdfs"] }
datafusion = "12.0.0"
datafusion-objectstore-hdfs-testing = { path = "../hdfs-testing"}
futures = "0.3"
num_cpus = "1.13.0"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
tonic = "0.7"