[package]
name = "datafusion-hdfs-examples"
version = "0.1.0"
edition = "2021"

authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs"

[dependencies]
ballista = { git = "https://github.com/apache/arrow-ballista.git", rev = "5c2420c9b3f3ba1b4c363b2fd93309c93ac851fd", features = ["standalone", "hdfs"] }
datafusion = "13.0.0"
datafusion-objectstore-hdfs-testing = { path = "../hdfs-testing"}
futures = "0.3"
num_cpus = "1.13.0"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
tonic = "0.8"