# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-objectstore-hdfs-testing"
version = "0.1.3"
edition = "2021"

authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs"

[features]
default = ["hdfs"]
hdfs = ["fs-hdfs"]
hdfs3 = ["fs-hdfs3"]

[dependencies]
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev = "4e2a72f6c7109d40a4986e3d05360524be078dd4" }
fs-hdfs = { version = "^0.1.12", optional = true }
fs-hdfs3 = { version = "^0.1.12", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
arrow = { version = "43.0.0", features = ["prettyprint", "dyn_cmp_dict"] }
datafusion-objectstore-hdfs = { path = "../hdfs" }
futures = "0.3"
object_store = "0.6.1"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
url = "2.2"