# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-objectstore-hdfs"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4" }
datafusion-data-access = { git = "https://github.com/yahoNanJing/arrow-datafusion.git", rev = "c7d0f0c73185e0ebb7d2339752e0d3e018001cdf" }
fs-hdfs = "^0.1.5"
futures = "0.3"

[dev-dependencies]
arrow = { version = "^11.0.0", features = ["prettyprint"] }
datafusion = { git = "https://github.com/yahoNanJing/arrow-datafusion.git", rev = "144d7faa868c289719051fe62d8d8dc49e100093", features = ["hdfs"] }
objectstore-hdfs-testing = { path = "../hdfs-testing"}
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
