# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-objectstore-hdfs"
version = "0.1.4"
edition = "2021"

description = "A hdfs object store implemented the object store"
authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = [
    "hadoop",
    "hdfs",
    "hdfs3",
    "store",
]
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs"

[features]
default = ["hdfs", "try_spawn_blocking"]
hdfs = ["fs-hdfs"]
hdfs3 = ["fs-hdfs3"]
# Used for trying to spawn a blocking thread for implementing each object store interface when running in a tokio runtime
try_spawn_blocking = []

[dependencies]
async-trait = "0.1.53"
bytes = "1.0"
chrono = { version = "0.4" }
fs-hdfs = { version = "^0.1.11", optional = true }
fs-hdfs3 = { version = "^0.1.11", optional = true }
futures = "0.3"
object_store = { version = "0.6", features = ["cloud"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
